giao dien login

--- a/public/be/signin.html
+++ b/public/be/signin.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from maraviyainfotech.com/projects/carrot/carrot-v21/admin-html/signin.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Jan 2025 14:23:11 GMT -->
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,14 +48,14 @@
 										<!-- Login form -->
 										<form class="login-form" method="post">
 											<div class="imgcontainer">
-												<a href="index.html"><img src="assets/img/logo/full-logo.png" alt="logo" class="logo"></a>
+												<a href="index.html"><img src="assets/img/logo/full-logo.png" alt="logo"
+														class="logo"></a>
 											</div>
 											<div class="input-control">
-												<input type="text" placeholder="Enter Username" name="uname"
-													required>
+												<input type="text" placeholder="Enter Username" name="uname" required>
 												<span class="password-field-show">
-													<input type="password" placeholder="Enter Password"
-														name="password" class="password-field" value="" required>
+													<input type="password" placeholder="Enter Password" name="password"
+														class="password-field" value="" required>
 													<span data-toggle=".password-field"
 														class="fa fa-fw fa-eye field-icon toggle-password"></span>
 												</span>
@@ -122,4 +123,5 @@
 
 
 <!-- Mirrored from maraviyainfotech.com/projects/carrot/carrot-v21/admin-html/signin.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Jan 2025 14:23:11 GMT -->
+
 </html>
