--- a/public/be/forgot.html
+++ b/public/be/forgot.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from maraviyainfotech.com/projects/carrot/carrot-v21/admin-html/forgot.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Jan 2025 14:23:14 GMT -->
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,16 +48,19 @@
 										<!-- Forgot form -->
 										<form class="forgot-form" method="post">
 											<div class="imgcontainer">
-												<a href="index.html"><img src="assets/img/logo/full-logo.png" alt="logo" class="logo"></a>
+												<a href="index.html"><img src="assets/img/logo/full-logo.png" alt="logo"
+														class="logo"></a>
 											</div>
 											<div class="input-control">
 												<p>Enter your email, we will send a link to reset your password.</p>
-												<input type="email" placeholder="Enter your email" name="email" required>
+												<input type="email" placeholder="Enter your email" name="email"
+													required>
 												<div class="login-btns">
 													<button type="submit">Reset</button>
 												</div>
 												<div class="login-with-btns">
-													<span class="already-acc">Return to<a href="signin.html" class="login-btn">Login</a></span>
+													<span class="already-acc">Return to<a href="signin.html"
+															class="login-btn">Login</a></span>
 												</div>
 											</div>
 										</form>
@@ -94,4 +98,5 @@
 
 
 <!-- Mirrored from maraviyainfotech.com/projects/carrot/carrot-v21/admin-html/forgot.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 11 Jan 2025 14:23:14 GMT -->
+
 </html>
