--- a/public/client/about.html
+++ b/public/client/about.html
@@ -160,7 +160,7 @@
                     <span>$64.08</span>
                 </div>
                 <div class="cart-btns">
-                    <a href="checkout.html" class="cart-btn checkout">CHECKOUT</a>
+                    <a href="checkout" class="cart-btn checkout">CHECKOUT</a>
                     <a href="cart.html" class="cart-btn cart">VIEW CART</a>
                 </div>
 
