--- a/public/client/faq.html
+++ b/public/client/faq.html
@@ -148,8 +148,8 @@
                         <span>$64.08</span>
                     </div>
                     <div class="cart-btns">
-                        <a href="checkout.html" class="cart-btn checkout">CHECKOUT</a>
-                        <a href="cart.html" class="cart-btn cart">VIEW CART</a>
+                        <a href="checkout" class="cart-btn checkout">CHECKOUT</a>
+                        <a href="cart" class="cart-btn cart">VIEW CART</a>
                     </div>
     
                     <p class="cart-shipping-text"><strong>SHIPPING:</strong> Continue shopping up to $64.08 and receive free
