--- a/public/client/product.html
+++ b/public/client/product.html
@@ -63,7 +63,7 @@
             <li><a href="#"><i class="flaticon-heart"></i></a></li>
 
             <li class="cart-icon">
-                <a href="cart.html"><i class="flaticon-shopping-cart"></i></a>
+                <a href="cart"><i class="flaticon-shopping-cart"></i></a>
                 <div class="cart-count"><span>10</span></div>
             </li>
         </ul>
