--- a/public/client/blog-sidebar.html
+++ b/public/client/blog-sidebar.html
@@ -340,7 +340,7 @@
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
                                         <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="checkout">Checkout</a></li>
                                         <li><a href="login.html">Login</a></li>
                                         <li><a href="register.html">Register</a></li>
                                         <li><a href="profile.html">Profile</a></li>
