--- a/public/client/register.html
+++ b/public/client/register.html
@@ -158,8 +158,8 @@
                     <span>$64.08</span>
                 </div>
                 <div class="cart-btns">
-                    <a href="checkout.html" class="cart-btn checkout">CHECKOUT</a>
-                    <a href="cart.html" class="cart-btn cart">VIEW CART</a>
+                    <a href="checkout" class="cart-btn checkout">CHECKOUT</a>
+                    <a href="cart" class="cart-btn cart">VIEW CART</a>
                 </div>
 
                 <p class="cart-shipping-text"><strong>SHIPPING:</strong> Continue shopping up to $64.08 and receive free
@@ -374,7 +374,7 @@
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
                                         <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="checkout">Checkout</a></li>
                                         <li><a href="login.html">Login</a></li>
                                         <li><a href="register.html">Register</a></li>
                                         <li><a href="profile.html">Profile</a></li>
