--- a/public/be/typography.html
+++ b/public/be/typography.html
@@ -40,7 +40,7 @@
 		<div id="cr-overlay">
 			<div class="loader"></div>
 		</div>
-		
+
 		<!-- Header -->
 		<header class="cr-header">
 			<div class="container-fluid">
@@ -71,15 +71,15 @@
 								<div class="cr-hover-drop-panel right">
 									<ul>
 										<li><a href="javascript:void(0)"><img class="flag" src="assets/img/flag/us.png"
-													alt="flag">English</a></li>
+													alt="flag">Tiếng Việt</a></li>
 										<li><a href="javascript:void(0)"><img class="flag" src="assets/img/flag/in.png"
-													alt="flag">Hindi</a></li>
+													alt="flag">Tiếng Hindi</a></li>
 										<li><a href="javascript:void(0)"><img class="flag" src="assets/img/flag/de.png"
-													alt="flag"> Deutsch</a></li>
+													alt="flag">Tiếng Đức</a></li>
 										<li><a href="javascript:void(0)"><img class="flag" src="assets/img/flag/it.png"
-													alt="flag">Italian</a></li>
+													alt="flag">Tiếng Ý</a></li>
 										<li><a href="javascript:void(0)"><img class="flag" src="assets/img/flag/jp.png"
-													alt="flag">Japanese</a></li>
+													alt="flag">Tiếng Nhật</a></li>
 									</ul>
 								</div>
 							</div>
@@ -90,20 +90,20 @@
 									<i class="ri-apps-2-line"></i>
 								</div>
 								<div class="cr-hover-drop-panel right">
-									<h6 class="title">Apps</h6>
+									<h6 class="title">Ứng dụng</h6>
 									<ul>
 										<li><a href="javascript:void(0)"><img class="app" src="assets/img/apps/1.png"
-													alt="flag">English</a></li>
+													alt="flag">Tiếng Việt</a></li>
 										<li><a href="javascript:void(0)"><img class="app" src="assets/img/apps/2.png"
-													alt="flag">Hindi</a></li>
+													alt="flag">Tiếng Hindi</a></li>
 										<li><a href="javascript:void(0)"><img class="app" src="assets/img/apps/3.png"
-													alt="flag"> Deutsch</a></li>
+													alt="flag">Tiếng Đức</a></li>
 										<li><a href="javascript:void(0)"><img class="app" src="assets/img/apps/4.png"
-													alt="flag">Italian</a></li>
+													alt="flag">Tiếng Ý</a></li>
 										<li><a href="javascript:void(0)"><img class="app" src="assets/img/apps/5.png"
-													alt="flag">Japanese</a></li>
+													alt="flag">Tiếng Nhật</a></li>
 										<li><a href="javascript:void(0)"><img class="app" src="assets/img/apps/6.png"
-													alt="flag">Japanese</a></li>
+													alt="flag">Tiếng Nhật</a></li>
 									</ul>
 								</div>
 							</div>
