--- a/public/theme/prium.github.io/phoenix/v1.22.0/apps/e-commerce/admin/add-product.html
+++ b/public/theme/prium.github.io/phoenix/v1.22.0/apps/e-commerce/admin/add-product.html
@@ -6818,7 +6818,8 @@
                             <option value="weight">Weight</option>
                             <option value="smell">Smell</option>
                           </select>
-                          <div class="product-variant-select-menu mb-3"><select class="form-select mb-3" data-choices="data-choices" multiple="multiple" data-options='{"removeItemButton":true,"placeholder":true}'>
+                          <div class="product-variant-select-menu mb-3">
+                            <select class="form-select mb-3" data-choices="data-choices" multiple="multiple" data-options='{"removeItemButton":true,"placeholder":true}'>
                               <option value="size">4x6 in</option>
                               <option value="color">9x6 in</option>
                               <option value="weight">11x8 in</option>
